# wishlist

./: .gitmodules  Cargo.toml  base-dockerfile  docker-compose-base.yaml
.github/workflows/: publish-image.yaml
src/: authorization.rs  main.rs
src/event/: http_event_service.rs  mod.rs
src/graphql/: mod.rs  mutation.rs  query.rs
src/graphql/model/: mod.rs  order_types.rs  user.rs  wishlist.rs
src/graphql/model/connection/: base_connection.rs  mod.rs  product_variant_connection.rs  wishlist_connection.rs
