[package]
name = "misarch-wishlist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { version = "7.0.16", features = ["bson", "chrono", "uuid", "log"] }
async-graphql-axum = "7.0.16"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
axum = { version = "0.8.3", features = ["macros"] }
mongodb = "2.8.2"
serde = "1.0.219"
futures = "0.3.31"
bson = "2.14.0"
clap = { version = "4.5.37", features = ["derive"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
mongodb-cursor-pagination = "0.3.2"
json = "0.12.4"
log = "0.4.27"
simple_logger = "5.0.0"
serde_json = "1.0.140"
opentelemetry = "0.30.0"
opentelemetry_sdk = { version = "0.30.0", features = ["rt-tokio"]}
opentelemetry-otlp = "0.30.0"
axum-otel-metrics = { version = "0.12.0" }
once_cell = "1.21.3"